# vodabill

./: .env.example  .gitignore  README.md  pyproject.toml
src/vodabill/: cli.py  downloader.py  emailer.py
